# ray-tow

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
examples/: final-scene-1-no_std.rs  final-scene-1.rs
src/: camera.rs  hit_record.rs  lib.rs  main.rs  material.rs  raw_image_buffer.rs  ray.rs  utils.rs  vectors.rs
src/shapes/: mod.rs  sphere.rs
