[package]
name = "ray-tow"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.2", default-features = false, features = ["rand", "libm"] }
image = "0.25.5"
indicatif = { version = "0.17.9", features = ["rayon"] }
itertools = "0.13.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"


[features]
default = []
std = []