[package]
name = "ray-tow"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.2", default-features = false, features = ["rand", "libm"] }
image = { version = "0.25.5", optional = true }
indicatif = { version = "0.17.9", features = ["rayon"], optional = true }
itertools = { version = "0.13.0", default-features = false }
libm = "0.2.11"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.4.3", default-features = false }
rayon = { version = "1.10.0", optional = true }

[features]
default = []
std = ["dep:image", "dep:rayon", "dep:indicatif", "rand/std", "rand/std_rng"]

[[example]]
name = "final-scene-1"
path = "examples/final-scene-1.rs"
required-features = ["std"]

[[example]]
name = "final-scene-1-no_std"
path = "examples/final-scene-1-no_std.rs"

[dev-dependencies]
panic-halt = "1.0.0"